package Model.tieFighterBlaster;

public interface tieFighterBlasterAnimStrategy {
    void animate();
}
