@startuml

title __TIEFIGHTERBLASTER's Class Diagram__\n

  namespace Model {
    namespace tieFighter {
      namespace laster {
        class Model.tieFighterBlaster.tieFighterBlaster {
            {static} + INIT_MISSILE_SIZE : int
            {static} + MAX_MISSILE_SIZE : int
            {static} + STATE_DONE : int
            {static} + STATE_EXPLODING : int
            {static} + STATE_SHOOTING : int
            {static} + UNIT_MOVE : int
            {static} + tieFighter : tieFighter
            ~ color : Color
            ~ size : int
            ~ state : int
            ~ target : Float
            + getCollisionRadius()
            + render()
            + tieFighterBlaster()
            + update()
            - updateState()
        }
      }
    }
  }
  

  namespace Model {
    namespace tieFighter {
      namespace laster {
        class Model.tieFighterBlaster.tieFighterBlasterAnimExploding {
            + animate()
            + tieFighterBlasterAnimExploding()
        }
      }
    }
  }
  

  namespace Model {
    namespace tieFighter {
      namespace laster {
        class Model.tieFighterBlaster.tieFighterBlasterAnimShooting {
            + animate()
            + tieFighterBlasterAnimShooting()
        }
      }
    }
  }
  

  namespace Model {
    namespace tieFighter {
      namespace laster {
        interface Model.tieFighterBlaster.tieFighterBlasterAnimStrategy {
            {abstract} + animate()
        }
      }
    }
  }
  

  Model.tieFighterBlaster.tieFighterBlaster -up-|> Model.GameFigure
  Model.tieFighterBlaster.tieFighterBlaster o-- Model.tieFighterBlaster.tieFighterBlasterAnimStrategy : animStrategy
  Model.tieFighterBlaster.tieFighterBlasterAnimExploding .up.|> Model.tieFighterBlaster.tieFighterBlasterAnimStrategy
  Model.tieFighterBlaster.tieFighterBlasterAnimExploding o-- Model.tieFighterBlaster.tieFighterBlaster : context
  Model.tieFighterBlaster.tieFighterBlasterAnimShooting .up.|> Model.tieFighterBlaster.tieFighterBlasterAnimStrategy
  Model.tieFighterBlaster.tieFighterBlasterAnimShooting o-- Model.tieFighterBlaster.tieFighterBlaster : context


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
